--- a/정보처리기사/현행 시스템 분석.md
+++ b/정보처리기사/현행 시스템 분석.md
@@ -97,3 +97,18 @@
 - ARID(Active Reviews FOR Intermediate Designs)
   - 전체 아키텍처가 아닌 특정 부분에 대한 품질요소에 집중하는 비용 평가 모델
 
+디자인 패턴
+
+- 소프트웨어 공학의 소프트웨어 설계에서 공통으로 발생하는 문제에 대해 자주 쓰이는 설계 방법을 정리한 패턴
+- 구성요소
+  - 패턴의 이름
+  - 문제 및 배경
+  - 솔루션
+  - 사례
+  - 결과
+  - 샘플 코드
+- 디자인 패턴 유형
+  - 목적
+    - 생성 - 객체 인스턴스 생성에 관여, 클래스 정의와 객체 생성 방식을 구조화, 캡슐화를 수행하는 패턴
+    - 구조 - 더 큰 구조 형성 목적으로 클래스나 객체의 조합을 다루는 패턴
+    - 행위 - 
